# sphinx-rerediraffe

./: .gitignore  .readthedocs.yml  .ruff.toml  README.md  README.rst  dev-requirements.txt  pyproject.toml
.github/workflows/: builddoc.yml  ci.yml  create-release.yml  release-publish.yaml  test.yml
docs/: conf.py  index.rst
sphinx_rerediraffe/: __init__.py  callback.py
sphinxext/: rediraffe.py
tests/: conftest.py  test_builder.py  test_create_graph.py  test_create_simple_redirects.py  test_ext.py  test_write_builder.py
tests/roots/builder/test-bad_rediraffe_file/: conf.py
tests/roots/builder/test-deleted_file_not_redirected_commit/: conf.py
tests/roots/builder/test-deleted_file_redirected_commit/: conf.py
tests/roots/builder/test-deleted_file_redirected_dict/HEAD/: conf.py
tests/roots/builder/test-deleted_file_redirected_dict/HEAD~1/: conf.py
tests/roots/builder/test-link_redirected_twice/: conf.py
tests/roots/builder/test-renamed_write_file_perc_low_pass/: conf.py
tests/roots/ext/test-bad_rediraffe_file/: conf.py
tests/roots/ext/test-complex/: conf.py
tests/roots/ext/test-complex_dict/: conf.py
tests/roots/ext/test-external/: redirects.txt
tests/roots/ext/test-jinja/: conf.py
tests/roots/ext/test-jinja_bad_path/: conf.py
tests/roots/ext/test-mixed_slashes/: conf.py
tests/roots/ext/test-no_rediraffe_file/: conf.py
tests/roots/ext/test-prefix_slashes/: mypage.rst  redirects.txt
tests/roots/ext/test-rediraffe_dir_only/: conf.py  redirects.txt
